--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "deleteentry",
         "entryedit",
         "entryupdate",
+        "Informations",
         "updateentry",
         "Worper"
     ]
