--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-forge/maker-zip": "^6.4.2",
     "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@electron-forge/plugin-webpack": "^6.4.2",
+    "@types/prismjs": "^1.26.2",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -45,6 +46,7 @@
     "antd": "^5.10.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
